Adds Leaderboard API endpoint
